--- a/ToDoList/Views/Categories/Details.cshtml
+++ b/ToDoList/Views/Categories/Details.cshtml
@@ -5,7 +5,7 @@
 @using ToDoList.Models;
 @model ToDoList.Models.Category
 
-<h2> Details</h2>
+<h2> @Html.DisplayFor(model => model.Name)</h2>
 
 @if (@Model.Items.Count == 0)
 {
@@ -21,7 +21,6 @@
 
 
 <hr/>
-<h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)</h3>
 <p>@Html.ActionLink("Add new Item", "Create", "Items")</p>
 <p>@Html.ActionLink("Back to categories list", "Index")</p>
 <p>@Html.ActionLink("Edit category", "Edit", new { id = Model.CategoryId })</p>
